# vehicle-license-backend

./: Cargo.toml  LICENSE.txt
.github/workflows/: rust.yml
.sqlx/: query-03ddefa3653649a0467af9aa34b16d865fc9ac643681f027f844440ccb034f89.json  query-077880e7e23c76d913b6881df4697bd9696598778ebed0ec9618bbfc7f2d8212.json  query-15a158caa3637a6974dd5f1ba97c6c4a0ab1af11e0024ecd1c0d8324eabb507e.json  query-362613410663f91ebca4d45f6062ebce2d95c7b118f58d6531dba8731b25fd68.json  query-374c5bd0f8292711a65505ce7b66bb14f6445c0645853e860da585a3fb6c15fc.json  query-3ce2a14cd2d07536f528cd03e09d3335319403d950e8d2415171564a142fbd99.json  query-4c0dbf0fd499a0af259c91ba9bef7d6e78a50ff0dc11b563bddbbbac62b23118.json  query-4ec0cfe8b956b3f7c3e6c4898ce4dbc799d672a55d003bbf29dcdd7718eefd56.json  query-a25528cfbe9cd1b112f8426c1777f93d7e7c63d8882221986e1b8650944c80e0.json  query-c42abc41fb9772af9e1fa8de599c7ef069ab857c8f1e6c5a46f72a796ebaa934.json  query-c480fcef8abc5df89faf8f952619ef023f3b2f407f01113905a0cc00469ef4f5.json  query-cafb78b2af5ea485eb924a32e0315b3e01a8e0111b1cd178b9472fdb44794f39.json
migrations/: 20251115135718_create_user.sql  20251117094149_create_user.up.sql  20251117094840_add_updated_at_column_user_table.down.sql  20251117094840_add_updated_at_column_user_table.up.sql
src/: error.rs  main.rs  swagger.rs
src/auth/: auth_extractor.rs  mod.rs  utils.rs
src/controllers/: auth_controller.rs  user_controller.rs
src/db/: mod.rs
src/models/: auth.rs  user.rs
src/repositories/: user_repository.rs
src/routes/: auth_routes.rs
