[package]
name = "vehicle-license-system"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
] }
dotenvy = "0.15"
once_cell = "1.20"
anyhow = "1.0"
thiserror = "2.0.17"
