[package]
name = "vehicle-license-system"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "time",
] }
dotenvy = "0.15"
once_cell = "1.20"
thiserror = "2.0.17"
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
nanoid = "0.4"
time = { version = "0.3.44", features = [
  "serde",
  "serde-human-readable",
  "macros",
] }
serde_json = "1"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3.20"
